# serializer version: 1
# name: TestPerturberStepFactory.test_iteration[FakePerturber-param1-1.0]
  dict({
    'param1': 1.0,
    'param2': 2,
  })
# ---
# name: TestPerturberStepFactory.test_iteration[FakePerturber-param2-3.0]
  dict({
    'param1': 1,
    'param2': 3.0,
  })
# ---
